--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,21 @@ a.btn {
   color: #000;
 }
 
+
+.p-toast-message {
+  padding: 9px;
+}
+
+.p-toast-message .p-toast-message-text {
+  display:flex;
+  flex-direction:column;
+  gap:5px;
+}
+
+.p-toast-message .p-toast-message-text .p-toast-detail {
+  margin: 0;
+}
+
 @media (max-width:991px){
   .app-container {
     grid-template-columns: 1fr;
